--- a/product/index.html
+++ b/product/index.html
@@ -19,25 +19,24 @@ permalink: /product
       <p class="product__price">$49.99</p>
 
       <!-- Pilihan Warna -->
-      <div class="product__colors">
-        <h3>Choose Color</h3>
-        <div class="color-options">
-          <button class="color-option" style="background-color: #2c3e50;" data-color="blue"></button>
-          <button class="color-option" style="background-color: #e74c3c;" data-color="red"></button>
-          <button class="color-option" style="background-color: #27ae60;" data-color="green"></button>
-        </div>
-      </div>
+ <div class="product__colors">
+  <h3>Choose Color</h3>
+  <div class="color-options">
+    <button class="color-option" style="background-color: #2c3e50;" data-color="blue"></button>
+    <button class="color-option" style="background-color: #e74c3c;" data-color="red"></button>
+    <button class="color-option" style="background-color: #27ae60;" data-color="green"></button>
+  </div>
+</div>
 
-      <!-- Pilihan Ukuran -->
-      <div class="product__sizes">
-        <h3>Select Size</h3>
-        <select class="size-select">
-          <option value="S">Small</option>
-          <option value="M">Medium</option>
-          <option value="L">Large</option>
-          <option value="XL">X-Large</option>
-        </select>
-      </div>
+<div class="product__sizes">
+  <h3>Select Size</h3>
+  <div class="size-options">
+    <button class="size-option" data-size="S">S</button>
+    <button class="size-option" data-size="M">M</button>
+    <button class="size-option" data-size="L">L</button>
+    <button class="size-option" data-size="XL">XL</button>
+  </div>
+</div>
 
       <!-- Pilihan Jumlah -->
       <div class="product__qty">
@@ -50,3 +49,18 @@ permalink: /product
     </div>
   </div>
 </section>
+<style>
+  .color-option, .size-option {
+    padding: 10px;
+    border: 2px solid #ccc;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition: all 0.3s;
+  }
+
+  .color-option.active, .size-option.active {
+    border-color: #000;
+    transform: scale(1.1);
+  }
+</style>
