--- a/product/index.html
+++ b/product/index.html
@@ -39,6 +39,7 @@ permalink: /product
 </div>
 
       <!-- Pilihan Jumlah -->
+<div class="product__flex">
       <div class="product__qty">
         <h3>Quantity</h3>
         <input type="number" min="1" value="1" class="qty-input">
@@ -46,6 +47,7 @@ permalink: /product
 
       <!-- Tombol Add to Cart -->
       <a href="#" class="product__btn">Add to Cart</a>
+</div>
     </div>
   </div>
 </section>
