--- a/userLogin/index.html
+++ b/userLogin/index.html
@@ -30,9 +30,11 @@ permalink: /userLogin
 
   <!-- Modal Register -->
   <div id="register-modal" class="modal">
-    <div class="modal-content">
+		<div class="modal-content">
+	<div class="">
       <span class="modal-close">&times;</span>
       <h2>Create Account</h2>
+	</div>
       <form id="register-form">
         <div class="input-group">
           <input type="text" id="first-name" placeholder="First Name" required>
@@ -58,7 +60,9 @@ permalink: /userLogin
       </form>
     </div>
   </div>
-
+<style>
+option {background-color: #333;}
+</style>
   <script src="{{ '/assets/js/user_login.js' | relative_url }}"></script>
   {% include showGlobal.html %}
   {% include javascript.html %}
