--- a/admin/index.html
+++ b/admin/index.html
@@ -21,5 +21,6 @@ permalink: /loginAdmin
 
   <script type="module" src="{{ '/assets/js/admin_login.js' | relative_url }}"></script>
 
+  {% include javascript.html %}
 </body>
 </html>
