--- a/product/index.html
+++ b/product/index.html
@@ -23,3 +23,4 @@ permalink: /product
       </div>
     </div>
   </section>
+<script src="{{ '/assets/js/singleProducts.js' | relative_url }}"></script>
