--- a/product/index.html
+++ b/product/index.html
@@ -13,6 +13,7 @@ permalink: /product
         </div>
         
         <div class="product-detail__info">
+          <p id="productCategory" class="product-detail__category"></p>
           <h1 id="productName" class="product-detail__title">Loading...</h1>
           <p id="productPrice" class="product-detail__price"></p>
           <p id="productDescription" class="product-detail__description"></p>
@@ -23,4 +24,4 @@ permalink: /product
       </div>
     </div>
   </section>
-<script src="{{ '/assets/js/singleProducts.js' | relative_url }}"></script>
+<script src="{{ '/assets/js/singleProduct.js' | relative_url }}"></script>
